# arbitrage-example

./: .env.example  Makefile  README.md  mypy.ini  pyproject.toml
arbitrage/: cli.py  client.py  util.py
arbitrage/swap/: __init__.py  camelot.py
arbitrage/tick_data/: __init__.py  camelot.py  polygon.py
arbitrage/web3/: __init__.py  camelot.py  dinari.py  erc20.py  util.py
arbitrage/web3/abi/: __init__.py  dinari_order_processor.json  dshare.json  erc20.json  wrapped_dshare.json
arbitrage/web3/address/: camelot.py  dinari.py  dshare.py
